chore: replace Arrays.asList with List.of